RESOLVED FIXED287418
[WebGPU] Release assertion triggered when offset + size > bufferSize
https://bugs.webkit.org/show_bug.cgi?id=287418
Summary [WebGPU] Release assertion triggered when offset + size > bufferSize
Mike Wyrzykowski
Reported 2025-02-10 10:29:27 PST
[WebGPU] Release assertion triggered when offset + size > bufferSize
Attachments
Mike Wyrzykowski
Comment 1 2025-02-10 10:29:45 PST
Mike Wyrzykowski
Comment 2 2025-02-10 10:35:49 PST
EWS
Comment 3 2025-02-10 20:02:17 PST
Committed 290195@main (06f75863a83f): <https://commits.webkit.org/290195@main> Reviewed commits have been landed. Closing PR #40364 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.